# recurrentgemma

./: .SourceSageignore  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: pytest.yml
colabs/: fine_tuning_tutorial_jax.ipynb  gsm8k_eval.ipynb  sampling_tutorial_jax.ipynb  sampling_tutorial_pytorch.ipynb
docs/: README_JA.md
examples/: sampling_jax.py  sampling_pytorch.py  simple_run_jax.py  simple_run_pytorch.py
recurrentgemma/: __init__.py  common.py  conversion.py  conversion_test.py
recurrentgemma/jax/: __init__.py  array_typing.py  complex_lib.py  complex_lib_test.py  griffin.py  griffin_test.py  layers.py  layers_test.py  modules.py  modules_test.py  pallas.py  pallas_test.py  sampler.py  sampler_test.py  scan.py  utils.py
recurrentgemma/torch/: __init__.py  array_typing.py  griffin.py  griffin_test.py  layers.py  layers_test.py  modules.py  modules_test.py  sampler.py  sampler_test.py  test_utils.py
