[tool.poetry]
name = "recurrentgemma"
version = "1.0.1"
description = "Open weights large language model (LLM) from Google DeepMind."
authors = [
  "Alex Botev <botev@google.com>",
  "Anushan Fernando <anushanf@google.com>",
  "George-Cristian Muraru <gmuraru@google.com>",
  "Leonard Berrada <lberrada@google.com>",
  "Ruba Haroun <rharoun@google.com>",
  "Samuel L. Smith <slsmith@google.com>",
  "Soham De <sohamde@google.com>",
]
repository = "https://github.com/google-deepmind/recurrentgemma"
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3"
absl-py = "^1"
sentencepiece = ">=0.2.0"
numpy = ">=1.26.0,<2.4.0"
einops = "^0"
jaxtyping = "^0"
typeguard = "^2"
orbax-checkpoint = { version = ">=0.1.7", optional = true}
jax = { version = ">=0.9.0", optional = true }
flax = { version = ">=0.12.0", optional = true }
torch = { version = "^2", optional = true }
pytest = { version = "^8", optional = true }

[tool.poetry.extras]
full = ["jax", "orbax-checkpoint", "flax", "torch"]
jax = ["jax", "orbax-checkpoint", "flax"]
torch = ["torch"]
test = ["pytest", "jax", "orbax-checkpoint", "flax", "torch"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
